ISSUE-446 (event-archival): Task route & test